Fix for drawer on mobile

--- a/source/css/_module.header.scss
+++ b/source/css/_module.header.scss
@@ -97,6 +97,13 @@
           z-index: 9;
         }
       }
+
+      &:first-child {
+        .c-primary-nav__subnav {
+          left: $space/2;
+          right: auto;
+        }
+      }
     }
 
     &__link {
@@ -282,7 +289,6 @@
     .c-drawer__toggle {
       opacity: 1;
       visibility: visible;
-      transform: scale(1);
     }
 
     .c-drawer__container {
@@ -293,7 +299,6 @@
   &__toggle {
     right: 0;
     opacity: 0;
-    transform: scale(0.9);
     visibility: hidden;
     transition: all 0.25s ease-in-out;
     background-color: rgba($c-black, 0.8);
@@ -401,66 +406,11 @@
 
       &.this-is-active {
         @include media('<=medium') {
-          position: absolute;
-          top: 0;
-          right: 0;
-          padding: $pad*2;
-          display: block;
-
-          .c-primary-nav__link {
-            display: block;
-            padding-top: 0;
-            padding-bottom: $pad/2;
-            font-family: $ff-font;
-            font-size: rem(20);
-            z-index: 999;
-            width: 100%;
-
-            &::before {
-              content: "";
-              display: inline-block;
-              background: url('../images/icons/o-arrow__bracket--left.svg') center center no-repeat;
-              background-size: rem(10);
-              width: rem(10);
-              height: rem(10);
-            }
-          }
-
-          .c-subnav__arrow {
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: rem(60);
-            z-index: 9999;
-            position: absolute;
-
-            &::after {
-              display: none;
-            }
-          }
-
           .c-primary-nav__subnav {
-            height: 100vh;
-            position: relative;
-            margin: 0;
-            padding: 0;
-            padding-top: $pad;
-            border-top: 1px solid $c-white;
-            overflow: scroll;
-            z-index: 999;
-
-            &__list-item {
-              background-color: transparent;
-              padding-top: 0;
-            }
-
-            &__link {
-              color: $c-white;
-              padding: $pad/4 0;
-              transition: none;
-            }
+            display: none;
           }
         }
+
       }
     }
 
@@ -595,7 +545,6 @@
       left: rem(290);
       padding-top: $space/4;
       margin-bottom: $space/2;
-      background: transparent !important;
     }
 
     @include media('>large') {
@@ -727,6 +676,85 @@
     .c-primary-nav__list-item,
     .c-primary-nav__list-item.this-is-active {
       transition: right 0.25s ease;
+    }
+  }
+
+  .c-drawer__nav-primary.this-is-active {
+    .c-drawer__subnav {
+      right: 0;
+    }
+  }
+
+  .c-drawer__subnav {
+    position: absolute;
+    right: -100%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    transition: right 0.25s ease;
+    display: block;
+    padding: $pad*2;
+    height: 100vh;
+
+    @include media('>medium') {
+      display: none;
+    }
+
+    .c-primary-nav__link {
+      display: block;
+      padding-top: 0;
+      padding-bottom: $pad/2;
+      font-family: $ff-font;
+      font-size: rem(20);
+      z-index: 999;
+      width: 100%;
+
+      &::before {
+        content: "";
+        display: inline-block;
+        background: url('../images/icons/o-arrow__bracket--left.svg') center center no-repeat;
+        background-size: rem(10);
+        width: rem(10);
+        height: rem(10);
+      }
+    }
+
+    .c-subnav__arrow {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: rem(60);
+      z-index: 9999;
+      position: absolute;
+
+      &::after {
+        display: none;
+      }
+    }
+
+    .c-primary-nav__subnav {
+      height: 100vh;
+      position: relative;
+      margin: 0;
+      padding: 0;
+      padding-top: $pad;
+      border-top: 1px solid $c-white;
+      overflow: scroll;
+      z-index: 999;
+      opacity: 1;
+      visibility: visible;
+
+      &__list-item {
+        background-color: transparent;
+        padding-top: 0;
+      }
+
+      &__link {
+        color: $c-white;
+        padding: $pad/4 0;
+        transition: none;
+      }
     }
   }
 }
